added status query
